add default mjcf

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,11 @@
             "args": [
                 "default",
                 "--data_dir",
-                "/home/haozhe/Dropbox/ucb/ucb",
+                "sample_data",
                 "--data_factor",
                 "1",
                 "--result_dir",
-                "/home/haozhe/Dropbox/ucb/ucb/gs_result_sfm",
+                "sample_data/gs_result_sfm",
                 // "--ckpt",
                 // "/home/haozhe/Dropbox/ucb/ucb/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
             ],
@@ -28,13 +28,13 @@
             "args": [
                 "default",
                 "--ckpt",
-                "/home/haozhe/Dropbox/ucb/ucb/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
+                "sample_data/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
                 "--data_factor",
                 "1",
                 "--export_ply_path",
-                "/home/haozhe/Dropbox/ucb/ucb/gs_result_sfm/scan30000.ply", 
+                "sample_data/gs_result_sfm/scan30000.ply", 
                 "--data_dir",
-                "/home/haozhe/Dropbox/ucb/ucb",
+                "sample_data",
             ],
             "console": "integratedTerminal"
         },
@@ -46,13 +46,13 @@
             "args": [
                 "default",
                 "--data_dir",
-                "/home/haozhe/Dropbox/thermalhand/0524/tall_hot_can_20250511_1618/result",
+                "sample_data",
                 "--data_factor",
                 "1",
                 "--result_dir",
-                "/home/haozhe/Dropbox/thermalhand/0524/tall_hot_can_20250511_1618/result/gs_result_sfm",
+                "sample_data/gs_result_sfm",
                 "--ckpt",
-                "/home/haozhe/Dropbox/thermalhand/0524/tall_hot_can_20250511_1618/result/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
+                "sample_data/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
             ],
             "console": "integratedTerminal"
         },
@@ -64,13 +64,13 @@
             "args": [
                 "default",
                 "--data_dir",
-                "/home/louhz/Desktop/ucb",
+                "sample_data",
                 "--data_factor",
                 "1",
                 "--result_dir",
-                "/home/louhz/Desktop/ucb/gs_result_sfm",
+                "sample_data/gs_result_sfm",
                 "--ckpt",
-                "/home/louhz/Desktop/ucb/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
+                "sample_data/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
             ],
             "console": "integratedTerminal"
         },
@@ -80,14 +80,14 @@
             "request": "launch",
             "program": "${workspaceFolder}/robogs/meshrecon/train.py",
             "args": [
-                "-s", "/home/louhz/Desktop/ucb",
+                "-s", "sample_data",
                 "-r", "2",
                 "--contribution_prune_ratio", "0.5",
                 "--lambda_normal_prior", "1",
                 "--lambda_dist", "10",
                 "--densify_until_iter", "3000",
                 "--iteration", "7000",
-                "-m", "/home/louhz/Desktop/ucbresult",
+                "-m", "sample_data/result",
                 "--w_normal_prior", "normals"
             ],
             "console": "integratedTerminal"
@@ -99,8 +99,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/robogs/meshrecon/render.py", 
             "args": [
-                "-s", "/home/louhz/Desktop/ucb",
-                "-m", "/home/louhz/Desktop/ucbresult",
+                "-s", "sample_data",
+                "-m", "sample_data/result",
             ],
             "console": "integratedTerminal"
         },
@@ -114,13 +114,13 @@
             "args": [
                 "default",
                 "--data_dir",
-                "/home/haozhe/Dropbox/rendering/demo",
+                "demo",
                 "--data_factor",
                 "1",
                 "--result_dir",
-                "/home/haozhe/Dropbox/rendering/demo/gs_result_sfm",
+                "demo/gs_result_sfm",
                 "--ckpt",
-                "/home/haozhe/Dropbox/rendering/demo/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
+                "demo/gs_result_sfm/ckpts/ckpt_29999_rank0.pt",
             ],
             "console": "integratedTerminal"
         },
